// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`github: FREE installation event insufficient permissions 1`] = `
Object {
  "body": "# Insufficient permissions

Hi there,
Thank you for installing LabelSync. We have noticed that your configuration stretches beyond repositories we can access. We assume that you forgot to allow access to certain repositories.

Please update your installation. 

_Missing repositories:_
 * unchanged

Best,
LabelSync Team",
  "title": "LabelSync - Insufficient permissions",
}
`;

exports[`github: FREE installation event sync 1`] = `
Array [
  Object {
    "body": Object {
      "color": "000000",
      "name": "alias/new",
    },
    "uri": "/repos/maticzav/changed/labels/alias/old:1",
  },
  Object {
    "body": Object {
      "color": "ffffff",
      "name": "update/color",
    },
    "uri": "/repos/maticzav/changed/labels/update/color",
  },
]
`;

exports[`github: FREE installation event sync 2`] = `
Array [
  "/repos/maticzav/changed/labels/alias/old:2",
  "/repos/maticzav/changed/labels/remove",
]
`;

exports[`github: FREE installation invalid config issue 1`] = `
Object {
  "body": "# Welcome to LabelSync!

Hi there,
Thank you for using LabelSync. We hope you enjoyed the experience so far.
It seems like there are some problems with your configuration.
Our parser reported that:

Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }

Let us know if we can help you with the configuration by sending us an email to support@label-sync.com. We'll try to get back to you as quickly as possible.

Best,
LabelSync Team",
  "title": "LabelSync - Onboarding configuration",
}
`;

exports[`github: FREE issues.labeled adds siblings 1`] = `
Array [
  "label/regular",
]
`;

exports[`github: FREE logs are reporting correctly 1`] = `
Array [
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Onboarding maticzav.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
      "plan": "FREE",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "No existing repository for maticzav, start onboarding.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Bootstraping config repo for maticzav.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Onboarding complete for maticzav.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Onboarding maticzav.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
      "plan": "FREE",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "User has existing repository in maticzav-labelsync, performing sync.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Error in config, skipping sync.",
    "meta": Object {
      "error": "Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }",
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Opened issue undefined.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Onboarding maticzav.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
      "plan": "FREE",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "User has existing repository in maticzav-labelsync, performing sync.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Performing sync.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Onboarding maticzav.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
      "plan": "FREE",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "User has existing repository in maticzav-labelsync, performing sync.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Insufficient permissions, skipping sync.",
    "meta": Object {
      "access": "{\\"status\\":\\"Insufficient\\",\\"missing\\":[\\"unchanged\\"],\\"accessible\\":[\\"changed\\"]}",
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Opened issue undefined.",
    "meta": Object {
      "event": Object {
        "action": "push",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "push",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Configuration loaded.",
    "meta": Object {
      "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
      "event": Object {
        "action": "push",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "push",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Performing label sync on maticzav.",
    "meta": Object {
      "event": Object {
        "action": "push",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "push",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Sync completed.",
    "meta": Object {
      "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
      "event": Object {
        "action": "push",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "push",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
      "reports": "[{\\"status\\":\\"Success\\",\\"repo\\":\\"changed\\",\\"owner\\":\\"maticzav\\",\\"additions\\":[{\\"name\\":\\"create/new\\",\\"color\\":\\"000000\\"}],\\"updates\\":[{\\"name\\":\\"alias/new\\",\\"color\\":\\"000000\\",\\"old_name\\":\\"alias/old:1\\"},{\\"name\\":\\"update/color\\",\\"color\\":\\"ffffff\\"}],\\"removals\\":[{\\"name\\":\\"alias/old:2\\",\\"color\\":\\"000000\\"},{\\"name\\":\\"remove\\",\\"color\\":\\"000000\\"}],\\"aliases\\":[{\\"name\\":\\"alias/new\\",\\"color\\":\\"000000\\",\\"old_name\\":\\"alias/old:2\\"}],\\"config\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}}},{\\"status\\":\\"Success\\",\\"repo\\":\\"unchanged\\",\\"owner\\":\\"maticzav\\",\\"additions\\":[],\\"updates\\":[],\\"removals\\":[],\\"aliases\\":[],\\"config\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":false},\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}]",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Error in config Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }",
    "meta": Object {
      "error": "Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }",
      "event": Object {
        "action": "push",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "push",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Commented on commit 0000000000000000000000000000000000000000.",
    "meta": Object {
      "event": Object {
        "action": "push",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "push",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Configuration loaded.",
    "meta": Object {
      "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
      "event": Object {
        "action": "push",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "push",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Insufficient permissions: unchanged",
    "meta": Object {
      "access": "{\\"status\\":\\"Insufficient\\",\\"missing\\":[\\"unchanged\\"],\\"accessible\\":[\\"changed\\"]}",
      "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
      "event": Object {
        "action": "push",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "push",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Commented on commit 0000000000000000000000000000000000000000.",
    "meta": Object {
      "event": Object {
        "action": "opened",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "pull_request",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "PullRequest action: opened",
    "meta": Object {
      "event": Object {
        "action": "opened",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "pull_request",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Configration loaded configuration on labels",
    "meta": Object {
      "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
      "event": Object {
        "action": "opened",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "pull_request",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Simulating sync.",
    "meta": Object {
      "event": Object {
        "action": "opened",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "pull_request",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Commented on PullRequest (undefined)",
    "meta": Object {
      "event": Object {
        "action": "opened",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "pull_request",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "PullRequest action: opened",
    "meta": Object {
      "event": Object {
        "action": "opened",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "pull_request",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Configuration didn't change, skipping comment.",
    "meta": Object {
      "event": Object {
        "action": "opened",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "pull_request",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "files": "README.md",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "PullRequest action: opened",
    "meta": Object {
      "event": Object {
        "action": "opened",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "pull_request",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Configration loaded configuration on labels",
    "meta": Object {
      "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
      "event": Object {
        "action": "opened",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "pull_request",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Insufficient permissions",
    "meta": Object {
      "event": Object {
        "action": "opened",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "pull_request",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Commented on PullRequest undefined",
    "meta": Object {
      "event": Object {
        "action": "labeled",
        "context": Object {
          "user_id": 43337079,
        },
        "name": "issues.labeled",
        "repo": Object {
          "name": "changed",
        },
        "user": Object {
          "id": 43337079,
          "owner": "maticzav",
          "type": "Organization",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "New label create in changed: \\":bug: Bugfix\\".",
    "meta": Object {
      "event": Object {
        "action": "labeled",
        "context": Object {
          "user_id": 43337079,
        },
        "name": "issues.labeled",
        "repo": Object {
          "name": "changed",
        },
        "user": Object {
          "id": 43337079,
          "owner": "maticzav",
          "type": "Organization",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Removing \\":bug: Bugfix\\" from changed.",
    "meta": Object {
      "event": Object {
        "action": "labeled",
        "context": Object {
          "user_id": 43337079,
        },
        "name": "issues.labeled",
        "repo": Object {
          "name": "changed",
        },
        "user": Object {
          "id": 43337079,
          "owner": "maticzav",
          "type": "Organization",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Removed label \\":bug: Bugfix\\" from changed.",
    "meta": Object {
      "event": Object {
        "action": "labeled",
        "context": Object {
          "user_id": 43337079,
        },
        "name": "issues.labeled",
        "repo": Object {
          "name": "changed",
        },
        "user": Object {
          "id": 43337079,
          "owner": "maticzav",
          "type": "Organization",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Issue (1) has been labeled with \\"label/siblings\\".",
    "meta": Object {
      "event": Object {
        "action": "labeled",
        "context": Object {
          "user_id": 43337079,
        },
        "name": "issues.labeled",
        "repo": Object {
          "name": "changed",
        },
        "user": Object {
          "id": 43337079,
          "owner": "maticzav",
          "type": "Organization",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Added siblings of label/siblings to issue 1: label/regular",
    "meta": Object {
      "event": Object {
        "action": "created",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "repository",
        "repo": Object {
          "name": "newrepo",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "New repository newrepo in maticzav.",
    "meta": Object {
      "event": Object {
        "action": "created",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "repository",
        "repo": Object {
          "name": "newrepo",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Performing sync on newrepo.",
    "meta": Object {
      "event": Object {
        "action": "created",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "repository",
        "repo": Object {
          "name": "newrepo",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
]
`;

exports[`github: FREE pull_request 1`] = `
Object {
  "body": "## LabelSync Overview 

### \`changed\`

__New labels:__
 * ![create/new](https://img.shields.io/static/v1?color=000000&label=&message=create%2Fnew \\"create/new\\")

__Changed labels:__
 * ![alias/old:1](https://img.shields.io/static/v1?color=inactive&label=&message=alias%2Fold%3A1 \\"alias/old:1\\") → ![alias/new](https://img.shields.io/static/v1?color=000000&label=&message=alias%2Fnew \\"alias/new\\")
 * ![update/color](https://img.shields.io/static/v1?color=ffffff&label=&message=update%2Fcolor \\"update/color\\")

__Aliased labels:__
 * ![alias/old:2](https://img.shields.io/static/v1?color=inactive&label=&message=alias%2Fold%3A2 \\"alias/old:2\\") → ![alias/new](https://img.shields.io/static/v1?color=000000&label=&message=alias%2Fnew \\"alias/new\\")

__Removed labels:__
 * ![alias/old:2](https://img.shields.io/static/v1?color=000000&label=&message=alias%2Fold%3A2 \\"alias/old:2\\")
 * ![remove](https://img.shields.io/static/v1?color=000000&label=&message=remove \\"remove\\")

---

### \`unchanged\`

Nothing changed! 🙈",
}
`;

exports[`github: FREE pull_request with insufficient permissions 1`] = `
Object {
  "body": "It seems like this configuration stretches beyond repositories we can access. Please update it so we can help you as best as we can.

_Missing repositories:_
 * unchanged",
}
`;

exports[`github: FREE push event 1`] = `
Object {
  "body": "## LabelSync Overview 

### \`changed\`

__New labels:__
 * ![create/new](https://img.shields.io/static/v1?color=000000&label=&message=create%2Fnew \\"create/new\\")

__Changed labels:__
 * ![alias/old:1](https://img.shields.io/static/v1?color=inactive&label=&message=alias%2Fold%3A1 \\"alias/old:1\\") → ![alias/new](https://img.shields.io/static/v1?color=000000&label=&message=alias%2Fnew \\"alias/new\\")
 * ![update/color](https://img.shields.io/static/v1?color=ffffff&label=&message=update%2Fcolor \\"update/color\\")

__Aliased labels:__
 * ![alias/old:2](https://img.shields.io/static/v1?color=inactive&label=&message=alias%2Fold%3A2 \\"alias/old:2\\") → ![alias/new](https://img.shields.io/static/v1?color=000000&label=&message=alias%2Fnew \\"alias/new\\")

__Removed labels:__
 * ![alias/old:2](https://img.shields.io/static/v1?color=000000&label=&message=alias%2Fold%3A2 \\"alias/old:2\\")
 * ![remove](https://img.shields.io/static/v1?color=000000&label=&message=remove \\"remove\\")

---

### \`unchanged\`

Nothing changed! 🙈",
}
`;

exports[`github: FREE push event 2`] = `
Array [
  Object {
    "body": Object {
      "color": "000000",
      "name": "alias/new",
    },
    "uri": "/repos/maticzav/changed/labels/alias/old:1",
  },
  Object {
    "body": Object {
      "color": "ffffff",
      "name": "update/color",
    },
    "uri": "/repos/maticzav/changed/labels/update/color",
  },
]
`;

exports[`github: FREE push event 3`] = `
Array [
  "/repos/maticzav/changed/labels/alias/old:2",
  "/repos/maticzav/changed/labels/remove",
]
`;

exports[`github: FREE push event 4`] = `
Array [
  Object {
    "body": Array [
      "alias/new",
    ],
    "uri": "/repos/maticzav/changed/issues/1/labels",
  },
  Object {
    "body": Array [
      "alias/new",
    ],
    "uri": "/repos/maticzav/changed/issues/4/labels",
  },
]
`;

exports[`github: FREE push event invalid configuration 1`] = `
Object {
  "body": "It seems like your configuration uses a format unknown to me. 
That might be a consequence of invalid yaml cofiguration file. 

Here's what I am having problems with:

Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }",
}
`;

exports[`github: FREE push event with insufficient premissions 1`] = `
Object {
  "body": "Your configuration stretches beyond repositories I can access. 
Please update it so I may sync your labels.

_Missing repositories:_
 * unchanged",
}
`;

exports[`github: PAID installation event insufficient permissions 1`] = `
Object {
  "body": "# Insufficient permissions

Hi there,
Thank you for installing LabelSync. We have noticed that your configuration stretches beyond repositories we can access. We assume that you forgot to allow access to certain repositories.

Please update your installation. 

_Missing repositories:_
 * unchanged

Best,
LabelSync Team",
  "title": "LabelSync - Insufficient permissions",
}
`;

exports[`github: PAID installation event sync 1`] = `
Array [
  Object {
    "body": Object {
      "color": "000000",
      "name": "alias/new",
    },
    "uri": "/repos/maticzav/changed/labels/alias/old:1",
  },
  Object {
    "body": Object {
      "color": "ffffff",
      "name": "update/color",
    },
    "uri": "/repos/maticzav/changed/labels/update/color",
  },
]
`;

exports[`github: PAID installation event sync 2`] = `
Array [
  "/repos/maticzav/changed/labels/alias/old:2",
  "/repos/maticzav/changed/labels/remove",
]
`;

exports[`github: PAID installation invalid config issue 1`] = `
Object {
  "body": "# Welcome to LabelSync!

Hi there,
Thank you for using LabelSync. We hope you enjoyed the experience so far.
It seems like there are some problems with your configuration.
Our parser reported that:

Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }

Let us know if we can help you with the configuration by sending us an email to support@label-sync.com. We'll try to get back to you as quickly as possible.

Best,
LabelSync Team",
  "title": "LabelSync - Onboarding configuration",
}
`;

exports[`github: PAID issues.labeled adds siblings 1`] = `
Array [
  "label/regular",
]
`;

exports[`github: PAID logs are reporting correctly 1`] = `
Array [
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Repository synced newrepo.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Onboarding maticzav.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
      "plan": "PAID",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "No existing repository for maticzav, start onboarding.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Bootstraping config repo for maticzav.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Onboarding complete for maticzav.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Onboarding maticzav.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
      "plan": "PAID",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "User has existing repository in maticzav-labelsync, performing sync.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Error in config, skipping sync.",
    "meta": Object {
      "error": "Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }",
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Opened issue undefined.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Onboarding maticzav.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
      "plan": "PAID",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "User has existing repository in maticzav-labelsync, performing sync.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Performing sync.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Onboarding maticzav.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
      "plan": "PAID",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "User has existing repository in maticzav-labelsync, performing sync.",
    "meta": Object {
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Insufficient permissions, skipping sync.",
    "meta": Object {
      "access": "{\\"status\\":\\"Insufficient\\",\\"missing\\":[\\"unchanged\\"],\\"accessible\\":[\\"changed\\"]}",
      "event": "installation",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Opened issue undefined.",
    "meta": Object {
      "event": Object {
        "action": "push",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "push",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Configuration loaded.",
    "meta": Object {
      "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
      "event": Object {
        "action": "push",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "push",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Performing label sync on maticzav.",
    "meta": Object {
      "event": Object {
        "action": "push",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "push",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Sync completed.",
    "meta": Object {
      "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
      "event": Object {
        "action": "push",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "push",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
      "reports": "[{\\"status\\":\\"Success\\",\\"repo\\":\\"changed\\",\\"owner\\":\\"maticzav\\",\\"additions\\":[{\\"name\\":\\"create/new\\",\\"color\\":\\"000000\\"}],\\"updates\\":[{\\"name\\":\\"alias/new\\",\\"color\\":\\"000000\\",\\"old_name\\":\\"alias/old:1\\"},{\\"name\\":\\"update/color\\",\\"color\\":\\"ffffff\\"}],\\"removals\\":[{\\"name\\":\\"alias/old:2\\",\\"color\\":\\"000000\\"},{\\"name\\":\\"remove\\",\\"color\\":\\"000000\\"}],\\"aliases\\":[{\\"name\\":\\"alias/new\\",\\"color\\":\\"000000\\",\\"old_name\\":\\"alias/old:2\\"}],\\"config\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}}},{\\"status\\":\\"Success\\",\\"repo\\":\\"unchanged\\",\\"owner\\":\\"maticzav\\",\\"additions\\":[],\\"updates\\":[],\\"removals\\":[],\\"aliases\\":[],\\"config\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":false},\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}]",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Error in config Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }",
    "meta": Object {
      "error": "Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }",
      "event": Object {
        "action": "push",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "push",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Commented on commit 0000000000000000000000000000000000000000.",
    "meta": Object {
      "event": Object {
        "action": "push",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "push",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Configuration loaded.",
    "meta": Object {
      "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
      "event": Object {
        "action": "push",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "push",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Insufficient permissions: unchanged",
    "meta": Object {
      "access": "{\\"status\\":\\"Insufficient\\",\\"missing\\":[\\"unchanged\\"],\\"accessible\\":[\\"changed\\"]}",
      "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
      "event": Object {
        "action": "push",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "push",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Commented on commit 0000000000000000000000000000000000000000.",
    "meta": Object {
      "event": Object {
        "action": "opened",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "pull_request",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "PullRequest action: opened",
    "meta": Object {
      "event": Object {
        "action": "opened",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "pull_request",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Configration loaded configuration on labels",
    "meta": Object {
      "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
      "event": Object {
        "action": "opened",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "pull_request",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Simulating sync.",
    "meta": Object {
      "event": Object {
        "action": "opened",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "pull_request",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Commented on PullRequest (undefined)",
    "meta": Object {
      "event": Object {
        "action": "opened",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "pull_request",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "PullRequest action: opened",
    "meta": Object {
      "event": Object {
        "action": "opened",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "pull_request",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Configuration didn't change, skipping comment.",
    "meta": Object {
      "event": Object {
        "action": "opened",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "pull_request",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "files": "README.md",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "PullRequest action: opened",
    "meta": Object {
      "event": Object {
        "action": "opened",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "pull_request",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Configration loaded configuration on labels",
    "meta": Object {
      "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
      "event": Object {
        "action": "opened",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "pull_request",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Insufficient permissions",
    "meta": Object {
      "event": Object {
        "action": "opened",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "pull_request",
        "repo": Object {
          "name": "maticzav-labelsync",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Commented on PullRequest undefined",
    "meta": Object {
      "event": Object {
        "action": "created",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "label.created",
        "repo": Object {
          "name": "changed",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "New label create in changed: \\":bug: Bugfix\\".",
    "meta": Object {
      "event": Object {
        "action": "created",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "label.created",
        "repo": Object {
          "name": "changed",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Removing \\":bug: Bugfix\\" from changed.",
    "meta": Object {
      "event": Object {
        "action": "created",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "label.created",
        "repo": Object {
          "name": "changed",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Removed label \\":bug: Bugfix\\" from changed.",
    "meta": Object {
      "event": Object {
        "action": "created",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "label.created",
        "repo": Object {
          "name": "changed",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "New label create in changed: \\":bug: Bugfix\\".",
    "meta": Object {
      "event": Object {
        "action": "created",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "label.created",
        "repo": Object {
          "name": "changed",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Removing \\":bug: Bugfix\\" from changed.",
    "meta": Object {
      "event": Object {
        "action": "created",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "label.created",
        "repo": Object {
          "name": "changed",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Removed label \\":bug: Bugfix\\" from changed.",
    "meta": Object {
      "event": Object {
        "action": "labeled",
        "context": Object {
          "user_id": 43337079,
        },
        "name": "issues.labeled",
        "repo": Object {
          "name": "changed",
        },
        "user": Object {
          "id": 43337079,
          "owner": "maticzav",
          "type": "Organization",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Issue (1) has been labeled with \\"label/siblings\\".",
    "meta": Object {
      "event": Object {
        "action": "labeled",
        "context": Object {
          "user_id": 43337079,
        },
        "name": "issues.labeled",
        "repo": Object {
          "name": "changed",
        },
        "user": Object {
          "id": 43337079,
          "owner": "maticzav",
          "type": "Organization",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Added siblings of label/siblings to issue 1: label/regular",
    "meta": Object {
      "event": Object {
        "action": "created",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "repository",
        "repo": Object {
          "name": "newrepo",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "New repository newrepo in maticzav.",
    "meta": Object {
      "event": Object {
        "action": "created",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "repository",
        "repo": Object {
          "name": "newrepo",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Performing sync on newrepo.",
    "meta": Object {
      "event": Object {
        "action": "created",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "repository",
        "repo": Object {
          "name": "newrepo",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Repository synced newrepo.",
    "meta": Object {
      "event": Object {
        "action": "created",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "repository",
        "repo": Object {
          "name": "newrepo",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "New repository newrepo in maticzav.",
    "meta": Object {
      "event": Object {
        "action": "created",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "repository",
        "repo": Object {
          "name": "newrepo",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "app": "default",
    "env": "TEST",
    "level": "INFO",
    "line": "Performing sync on newrepo.",
    "meta": Object {
      "event": Object {
        "action": "created",
        "context": Object {
          "user_id": 21031067,
        },
        "name": "repository",
        "repo": Object {
          "name": "newrepo",
        },
        "user": Object {
          "id": 21031067,
          "owner": "maticzav",
          "type": "User",
        },
      },
      "periodEndsAt": "periodEndsAt",
    },
  },
]
`;

exports[`github: PAID pull_request 1`] = `
Object {
  "body": "## LabelSync Overview 

### \`changed\`

__New labels:__
 * ![create/new](https://img.shields.io/static/v1?color=000000&label=&message=create%2Fnew \\"create/new\\")

__Changed labels:__
 * ![alias/old:1](https://img.shields.io/static/v1?color=inactive&label=&message=alias%2Fold%3A1 \\"alias/old:1\\") → ![alias/new](https://img.shields.io/static/v1?color=000000&label=&message=alias%2Fnew \\"alias/new\\")
 * ![update/color](https://img.shields.io/static/v1?color=ffffff&label=&message=update%2Fcolor \\"update/color\\")

__Aliased labels:__
 * ![alias/old:2](https://img.shields.io/static/v1?color=inactive&label=&message=alias%2Fold%3A2 \\"alias/old:2\\") → ![alias/new](https://img.shields.io/static/v1?color=000000&label=&message=alias%2Fnew \\"alias/new\\")

__Removed labels:__
 * ![alias/old:2](https://img.shields.io/static/v1?color=000000&label=&message=alias%2Fold%3A2 \\"alias/old:2\\")
 * ![remove](https://img.shields.io/static/v1?color=000000&label=&message=remove \\"remove\\")

---

### \`unchanged\`

Nothing changed! 🙈",
}
`;

exports[`github: PAID pull_request with insufficient permissions 1`] = `
Object {
  "body": "It seems like this configuration stretches beyond repositories we can access. Please update it so we can help you as best as we can.

_Missing repositories:_
 * unchanged",
}
`;

exports[`github: PAID push event 1`] = `
Object {
  "body": "## LabelSync Overview 

### \`changed\`

__New labels:__
 * ![create/new](https://img.shields.io/static/v1?color=000000&label=&message=create%2Fnew \\"create/new\\")

__Changed labels:__
 * ![alias/old:1](https://img.shields.io/static/v1?color=inactive&label=&message=alias%2Fold%3A1 \\"alias/old:1\\") → ![alias/new](https://img.shields.io/static/v1?color=000000&label=&message=alias%2Fnew \\"alias/new\\")
 * ![update/color](https://img.shields.io/static/v1?color=ffffff&label=&message=update%2Fcolor \\"update/color\\")

__Aliased labels:__
 * ![alias/old:2](https://img.shields.io/static/v1?color=inactive&label=&message=alias%2Fold%3A2 \\"alias/old:2\\") → ![alias/new](https://img.shields.io/static/v1?color=000000&label=&message=alias%2Fnew \\"alias/new\\")

__Removed labels:__
 * ![alias/old:2](https://img.shields.io/static/v1?color=000000&label=&message=alias%2Fold%3A2 \\"alias/old:2\\")
 * ![remove](https://img.shields.io/static/v1?color=000000&label=&message=remove \\"remove\\")

---

### \`unchanged\`

Nothing changed! 🙈",
}
`;

exports[`github: PAID push event 2`] = `
Array [
  Object {
    "body": Object {
      "color": "000000",
      "name": "alias/new",
    },
    "uri": "/repos/maticzav/changed/labels/alias/old:1",
  },
  Object {
    "body": Object {
      "color": "ffffff",
      "name": "update/color",
    },
    "uri": "/repos/maticzav/changed/labels/update/color",
  },
]
`;

exports[`github: PAID push event 3`] = `
Array [
  "/repos/maticzav/changed/labels/alias/old:2",
  "/repos/maticzav/changed/labels/remove",
]
`;

exports[`github: PAID push event 4`] = `
Array [
  Object {
    "body": Array [
      "alias/new",
    ],
    "uri": "/repos/maticzav/changed/issues/1/labels",
  },
  Object {
    "body": Array [
      "alias/new",
    ],
    "uri": "/repos/maticzav/changed/issues/4/labels",
  },
]
`;

exports[`github: PAID push event invalid configuration 1`] = `
Object {
  "body": "It seems like your configuration uses a format unknown to me. 
That might be a consequence of invalid yaml cofiguration file. 

Here's what I am having problems with:

Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }",
}
`;

exports[`github: PAID push event with insufficient premissions 1`] = `
Object {
  "body": "Your configuration stretches beyond repositories I can access. 
Please update it so I may sync your labels.

_Missing repositories:_
 * unchanged",
}
`;
